WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2005-01-26


Version 0.1.0 (under dev!):
   * away nicks are now displayed with another color
   * added away indicator
   * added lag indicator (and auto-disconnect after a delay if important lag)
   * improved completion: now completes commands arguments (IRC and internal),
     when only one completion matches, completion mechanism is stoped (to
     complete command arg for example)
   * fixed colors bug: removed "gray" color (replaced by "default"), colors are
     ok when terminal has white (or light) background
   * fixed crash when closing some private buffers
   * fixed crash when unknown section with option(s) in config file
   * improved /set command: empty strings are allowed, new colors, server
     options can be changed while WeeChat is running
   * added default away/part/quit messages in config file
   * new [irc] section in config file, option "look_display_away" moved to
     "irc_display_away"
   * server messages & errors are all prefixed (by 3 chars, like '-@-')
   * added new options for charset: look_charset_decode and look_charset_encode
   * fixed /op, /deop, /voice, /devoice (now ok with many nicks)
   * fixed /me command (now ok without parameter)
   * fixed /away command (now ok if not away)
   * logs are now disabled by default (server/channel/private)

Version 0.0.9 (2005-01-01):
   * auto-reconnection to server (new options: server_autoreconnect (on/off),
     server_autoreconnect_delay (in seconds))
   * major bug fixed when socket is closed by server (100% CPU usage fixed),
     and disconnections are now ok (all channels are "closed", history is still
     visible, and buffer will be used again if reconnection to server)
   * option "look_remove_colors_from_msgs" is now working
   * fixed display of nick mode changes
   * new command "/buffer close" (close any server/channel/private buffer)